<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_league"
        android:icon="@drawable/ic_public"
        android:title="@string/league" />

    <item
        android:id="@+id/navigation_favorite_event"
        android:icon="@drawable/ic_star"
        android:title="@string/favorite" />

    <item
        android:id="@+id/navigation_search_team"
        android:icon="@drawable/ic_badge"
        android:title="@string/teams" />

    <item
        android:id="@+id/navigation_search_event"
        android:icon="@drawable/ic_calendar_search"
        android:title="@string/matches" />
</menu>