<resources>
    <string name="app_name">Football League</string>
    <string name="league_detail_label">League Detail</string>

    <string-array name="league_id">
        <item>4332</item>
        <item>4328</item>
        <item>4334</item>
        <item>4335</item>
        <item>4331</item>
        <item>4344</item>
        <item>4422</item>
        <item>4395</item>
        <item>4356</item>
        <item>4346</item>
    </string-array>

    <string-array name="league_name">
        <item>Italian Serie A</item>
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
        <item>German Bundesliga</item>
        <item>Portuguese Primeira Liga</item>
        <item>Polish Ekstraklasa</item>
        <item>Scottish Premier League</item>
        <item>Australian A-League</item>
        <item>American Major League Soccer</item>
    </string-array>

    <string-array name="league_desc">
        <item>Serie A, also called Serie A TIM due to sponsorship by Telecom Italia, is a professional league competition for football clubs located at the top of the Italian football league system and has been operating for over eighty years since the 1929–30 season. It had been organized by Lega Calcio until 2010, but a new league, the Lega Serie A, was created for the 2010–11 season. Serie A is regarded as one of the best football leagues in the world. Serie A was considered the best league in the world in the \'90s, and has produced the highest number of European Cup finalists: Italian clubs have reached the final of the competition on a record twenty-six different occasions, winning the title twelve times. Serie A is ranked 4th among European leagues according to UEFA\'s league coefficient behind the Spanish La Liga, English Premier League and German Bundesliga, which is based on the performance of Italian clubs in the Champions League and the Europa League. It also ranked 5th in world according to the first trends of the 2011 IFFHS rating.</item>
        <item>The Premier League (often referred to as the English Premier League (EPL) outside England), is the top level of the English football league system. Contested by 20 clubs, it operates on a system of promotion and relegation with the English Football League (EFL).</item>
        <item>Ligue 1 (French pronunciation: ​; League 1, formerly known as Division 1), is the French professional league for association football clubs. It is the country\'s primary football competition and serves as the top division of the French football league system. Ligue 1 is one of two divisions making up the Ligue de Football Professionnel, the other being Ligue 2. Contested by 20 clubs, it operates on a system of promotion and relegation with Ligue 2. Seasons run from August to May, with teams playing 38 games each totaling 380 games in the season. Most games are played on Saturdays and Sundays, with a few games played during weekday evenings. Play is regularly suspended the last weekend before Christmas for two weeks before returning in the second week of January. Ligue 1 is one of the top national leagues, currently ranked sixth in Europe behind the Spanish La Liga, English Premier League, the German Bundesliga, the Portuguese Primeira Liga and the Italian Serie A.</item>
        <item>The Primera División, commonly known as La Liga and as La Liga Santander for sponsorship reasons, is the top professional association football division of the Spanish football league system. Administrated by the Liga de Fútbol Profesional (LFP), La Liga is contested by 20 teams, with the three lowest-placed teams relegated to the Segunda División and replaced by the top two teams in that division plus the winner of a play-off.</item>
        <item>The Fußball-Bundesliga (English: Football Federal League), commonly known as the Bundesliga, is a professional association football league in Germany and the football league with the highest average stadium attendance worldwide. At the top of the German football league system, the Bundesliga is Germany\'s primary football competition. The Bundesliga is contested by 18 teams and operates on a system of promotion and relegation with the 2. Bundesliga. Seasons run from August to May. Most games are played on Saturdays and Sundays, with a few games played during weekdays. All of the Bundesliga clubs qualify for the DFB-Pokal. The winner of the Bundesliga qualifies for the DFL-Supercup.</item>
        <item>AThe Primeira Liga (First League; Portuguese pronunciation: ), formerly called Primeira Divisão), is the top professional association football division of the Portuguese football league system.

The Primeira Liga is contested by 18 clubs, but only five of them have won the title. Founded in 1934, the league is in its 81st edition (counting four experimental leagues in the 1930s). It has been dominated by the "Big Three": Benfica, Porto and Sporting CP. These three clubs have won a total of 78 titles, with Belenenses and Boavista winning the other two.</item>
        <item>The Ekstraklasa (Polish pronunciation: ), or T-Mobile Ekstraklasa for sponsorship reasons, is a Polish professional league for association football clubs. At the top of the Polish football league system, it is the country\'s primary football competition. It is contested by 16 clubs, operating a system of promotion and relegation with the I Liga. The Ekstraklasa season starts in late July, and ends in May the following year, teams play a total of 37 games each.</item>
        <item>The Scottish Premiership is the top division of the Scottish Professional Football League, the league competition for professional football clubs in Scotland. The Scottish Premiership was established in July 2013, after the Scottish Professional Football League was formed by a merger of the Scottish Premier League and Scottish Football League. Teams receive three points for a win and one point for a draw. No points are awarded for a loss. Teams are ranked by total points, then goal difference, and then goals scored. At the end of each season, the club with the most points is crowned league champion. If points are equal, the goal difference and then goals scored determine the winner.</item>
        <item>The A-League is a professional men\'s soccer league, run by Football Federation Australia (FFA). At the top of the Australian league system, it is the country\'s primary competition for the sport. The A-League was established in 2004 as a successor to the National Soccer League (NSL) and competition commenced in August 2005. The league is currently contested by ten teams; nine based in Australia and one based in New Zealand. It is known as the Hyundai A-League (HAL) through a sponsorship arrangement with the Hyundai Motor Company.</item>
        <item>Major League Soccer (MLS) is a professional soccer league representing the sport\'s highest level in both the United States and Canada. MLS constitutes one of the major professional sports leagues of the United States and Canada. The league is composed of 20 teams—17 in the U.S. and 3 in Canada. The MLS regular season runs from March to October, with each team playing 34 games; the team with the best record is awarded the Supporters\' Shield. The post season includes twelve teams competing in the MLS Cup Playoffs through November and December, culminating in the championship game, the MLS Cup. MLS teams also play in other competitions against teams from other divisions and countries, such as the U.S. Open Cup, the Canadian Championship, and the CONCACAF Champions League. MLS is sanctioned by the United States Soccer Federation (U.S. Soccer).</item>
    </string-array>

    <array name="league_badge">
        <item>@drawable/img_seriea_badge</item>
        <item>@drawable/img_epl_badge</item>
        <item>@drawable/img_fl1_badge</item>
        <item>@drawable/img_laliga_badge</item>
        <item>@drawable/img_bl_badge</item>
        <item>@drawable/img_port_badge</item>
        <item>@drawable/img_polish_badge</item>
        <item>@drawable/img_scot_badge</item>
        <item>@drawable/img_aus_badge</item>
        <item>@drawable/img_mls_badge</item>
    </array>

    <array name="league_logo">
        <item>@drawable/img_seriea_logo</item>
        <item>@drawable/img_epl_logo</item>
        <item>@drawable/img_fl1_logo</item>
        <item>@drawable/img_laliga_logo</item>
        <item>@drawable/img_bl_logo</item>
        <item>@drawable/img_port_logo</item>
        <item>@drawable/img_polish_logo</item>
        <item>@drawable/img_scot_logo</item>
        <item>@drawable/img_aus_logo</item>
        <item>@drawable/img_mls_logo</item>
    </array>

    <string name="full_time">Full Time</string>
    <string name="stats">Stats</string>
    <string name="lineup">Lineup</string>
    <string name="spectators">Spectators</string>
    <string name="team_stats">Team Stats</string>
    <string name="shots">Shots</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="red_cards">Red Cards</string>
    <string name="starting_xi">Starting XI</string>
    <string name="substitutes">Substitutes</string>
    <string name="search_event">Search Matches…</string>
    <string name="search_matches">Search Matches</string>
    <string name="league">League</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="removed_from_favorite">Removed to favorite</string>
    <string name="favorite_matches">Favorite Matches</string>
    <string name="events_not_found">Events not found.</string>
    <string name="tab_label_web">Web</string>
    <string name="tab_label_table">Table</string>
    <string name="tab_label_lastevent">Last Events</string>
    <string name="tab_label_nextevent">Next Events</string>
    <string name="tab_label_team">Teams</string>

    <string name="standings_team">Team</string>
    <string name="standings_p">P</string>
    <string name="standings_w">W</string>
    <string name="standings_d">D</string>
    <string name="standings_l">L</string>
    <string name="standings_gf">GF</string>
    <string name="standings_ga">GA</string>
    <string name="standings_gd">GD</string>
    <string name="standings_pts">PTS</string>
    <string name="favorite_teams">Favorite Teams</string>

    <string name="search_event_init">Please search the events.</string>
    <string name="search_team_init">Please search the teams.</string>
    <string name="favorite">Favorite</string>
    <string name="teams">Teams</string>
    <string name="matches">Matches</string>
</resources>