<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juvetic.calcio.ui.lastevent.LastEventsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_last_event"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp">

    </androidx.recyclerview.widget.RecyclerView>

</FrameLayout>
